--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "author": "Gary Li <gary@proworkflow.com>",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.1",
     "source-map-loader": "^2.0.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "scripts": {
+    "start": "webpack serve --mode development"
   }
 }
