--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "author": "Gary Li <gary@proworkflow.com>",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.2.1",
     "source-map-loader": "^2.0.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
