--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "html-webpack-plugin": "^5.3.1",
@@ -30,6 +29,7 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
+    "lint": "eslint ./src",
     "start": "webpack serve --mode development"
   }
 }
